Changed scripts to conditionally add endorsed dir on startup for jre prior to 9.